tests/comp/sem/invalid/undefined_member_type.mj
class A {

	/*** public B foo; ***/

	public static void main(String[] args) {
	}

}
